--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "auto-routes-linking",
   "version": "1.0.1",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
   "author": "ajibadeabd",
   "license": "MIT",
