--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "auto-routes-linking",
   "version": "1.0.1",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ajibadeabd",
   "license": "MIT",
